--- a/core/admin/src/index.html
+++ b/core/admin/src/index.html
@@ -19,22 +19,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-<!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
-<!--    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Permanent+Marker&family=Rancho&family=Special+Elite&display=swap" rel="stylesheet">-->
+    <!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
+    <!--    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Permanent+Marker&family=Rancho&family=Special+Elite&display=swap" rel="stylesheet">-->
     <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"-->
-<!--          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
+    <!--          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
     <!--    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>-->
-<!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"-->
-<!--            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
-<!--            crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"-->
-<!--            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"-->
-<!--            crossorigin="anonymous"></script>-->
+    <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"-->
+    <!--            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
+    <!--            crossorigin="anonymous"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"-->
+    <!--            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"-->
+    <!--            crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
-    <script src="https://kit.fontawesome.com/ce8ed65b66.js" crossorigin="anonymous"></script>
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/ce8ed65b66.js"></script>
     <!--    <script src="https://unpkg.com/vue@next"></script>-->
-<!--    <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>-->
-    <script src="js/bundle.js" defer></script>
+    <!--    <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>-->
+    <script defer src="js/bundle.js"></script>
 </head>
 <body>
 <div id="app">
